src/pages/landing/styles/hero-view.css
.hero {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100vh;
  /* max-width: 100%; */
  background-color: #3aae84;
  color: #fff;
  /* padding: 0 0.2em; */
}
.hero__text {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.hero__title {
  max-width: 12em;
  font-size: 40px;
  font-weight: 900;
  text-align: center;
}
.hero__img--one {
  display: none;
}
.hero__img {
  display: none;
}
.hero__content {
  max-width: 20em;
  margin: 1em 0 1.5em 0;
  font-size: 16px;
  text-align: center;
}
/* @ Screen 400 */

@media screen and (max-width: 400px) {
  .hero__title {
    margin: 0 0.8em;
  }
  .hero__content {
    margin-left: 2em;
    margin-right: 2em;
  }
}

/* @ Screen 540px */

@media screen and (min-width: 540px) {
  .hero {
    /* max-width: 500px; */
    background-color: #ffffff;
    color: #000;
    width: 90vw;
    height: 100vh;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: 10em 2em;
  }

  .hero__text {
    /* max-width: 400px; */
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  .hero__img--one {
    display: block;
  }
  .hero__img--one div img {
    object-fit: contain;
    max-width: 100%;
  }
  .hero__title {
    margin-top: 1em;
    max-width: 19em;
    font-size: 40px;
    font-weight: 900;
    text-align: center;
  }
  .hero__content {
    max-width: 33em;
    margin: 1em 0 1.5em 0;
    font-size: 20px;
    text-align: center;
  }
}
/* @ Screen 768px */
@media screen and (min-width: 768px) {
  .hero {
    background-color: #ffffff;
    color: #000;
    height: 70vh;
    justify-content: start;
    margin-top: 4em;
  }

  .hero__img--one {
    display: block;
  }
  .hero__title {
    margin-top: 1em;
    max-width: 19em;
    font-size: 40px;
    font-weight: 900;
    text-align: center;
  }
  .hero__content {
    max-width: 33em;
    margin: 1em 0 1.5em 0;
    font-size: 20px;
    text-align: center;
  }
}

/* @ Screen 1004px */

@media screen and (min-width: 1004px) {
  .hero {
    margin: 0 5em;
    margin-top: 2.9em;
    background-color: #ffffff;
    color: #000;
    height: auto;
    align-items: flex-start;
    flex-direction: row;
    text-align: start;
  }
  .hero__text {
    align-items: flex-start;
    justify-content: center;
    text-align: center;
  }
  .hero__title {
    width: 10em;
    font-size: 57px;
    text-align: left;
  }

  .hero__content {
    width: 40em;
    text-align: left;
  }
  /* this is not working */
  .hero__btn button {
    display: flex;
    justify-items: center;
    align-items: center;
    text-align: center;
  }
  .hero__img--one {
    display: none;
  }
  .hero__img {
    display: block;
  }
  .hero__img div img {
    object-fit: contain;
    max-width: 100%;
  }
}

